<resources>
    <string name="app_name">MapsApp</string>
    <string name="title_activity_maps">Map</string>

    <string name="image_description">An image</string>
    <string name="pin_icon_description">A location icon</string>
    <string name="date_icon_description">A calendar icon</string>

    <string name="description_text">Description</string>
    <string name="button_save">Save</string>
    <string name="button_back">Back</string>
    <string name="button_delete">Delete</string>
</resources>
